# ShadowCreator-PanoTouch

./: A01.keystore  AVC_denial.txt  Android_mk  build.gradle  readme.md
output/release/: output-metadata.json  touchpad-release.apk
src/androidTest/java/com/markshawn/touchpad/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  log.h  utils.h
src/main/cpp/honghu_gamepad/: HandShankHelper.h  native_honghu_gamepad.cpp
src/main/cpp/reference/UInputManager/: UinputManager.cpp  UinputManager.h
src/main/cpp/uinput_touchpad/mouse_driver/: mouse_driver.cpp  mouse_driver.h  native_uinput_mouse_driver.cpp
src/main/cpp/uinput_touchpad/touchpad_driver/: native_uinput_touchpad_driver.cpp  test_touchpad_driver.cpp  touchpad_driver.cpp  touchpad_driver.h
src/main/java/com/luci/pano_touch/: BaseActivity.java  BaseFloatService.java  Constants.java  DataBindingAdaptor.java  InputCenter.java  ReceiverStatic.java  Utils.java
src/main/java/com/luci/pano_touch/honghu_gamepad/: HonghuJoystickBean.java  HonghuJoystickBeanHold.java  HonghuKey.java  HonghuKeyBean.java  HonghuKeysService.java  UtilsLoadLayout.java
src/main/java/com/luci/pano_touch/screen_mirror/: CornerBean.java  ScreenMirrorActivity.java  ScreenMirrorService.java  ScreenMirrorServiceBackup.java  TrackBallBean.java
src/main/java/com/luci/pano_touch/touchpad/: TouchpadActivity.java
src/main/res/drawable/: border.xml
src/main/res/layout/: primary_screen_mirror_layout.xml  primary_touchpad_layout.xml  secondary_honghu_gamepad_key.xml  secondary_honghu_gamepad_keys.xml  secondary_input_center_layout.xml  secondary_screen_mirror_corner_unit.xml  secondary_screen_mirror_layout.xml  secondary_track_ball_unit.xml
src/main/res/values/: strings.xml  styles.xml  themes.xml
src/main/res/values-night/: themes.xml
src/main/res/xml/: device_filter.xml  joystick_entry.xml  keys_base.xml  keys_layout_1200x972.xml  keys_layout_1920x1080.xml  keys_layout_1920x984_backup.xml
src/test/java/com/markshawn/touchpad/: ExampleUnitTest.java
